# ha-app-immich-dlna

./: README.md  pyproject.toml  repository.yaml
immich-dlna/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
immich-dlna/rootfs/etc/services.d/immich-dlna/: run
src/immich_dlna/: __init__.py  __main__.py  cache.py  config.py  immich.py  logging_config.py  main.py  metrics.py  ssdp.py  web.py
src/immich_dlna/dlna/: __init__.py  catalog.py  connection_manager.py  content_directory.py  device_description.py  didl.py  model.py  scpd.py  soap.py
